fix font overflow

--- a/styles.css
+++ b/styles.css
@@ -20,18 +20,25 @@ body {
 
 @media only screen and (max-width: 600px) {
   .welcome-container {
+    margin-top: 30px;
     display: flex;
     flex-direction: column;
+    max-width: 90vw;
   }
   .first-container > .first-container-subtitle {
     font-size: 24px;
-    width: 90vw;
-    margin-bottom: 18px;
+    width: 85vw;
+    margin-bottom: 16px;
   }
   .first-container {
     max-width: 80% !important;
     margin-right: 20px;
   }
+
+  .first-container > p {
+    margin-bottom: 24px;
+  }
+
   #openModalBtn {
     margin-bottom: 20px;
     display: inline-block;
